--- a/public/main.css
+++ b/public/main.css
@@ -1,8 +1,118 @@
 body {
-  color: white;
-  background-color: black;
+  color: var(--color-main);
+  background-color: var(--color-main-bg);
 }
 
 a {
+  color: white;
+}
+
+.float-right {
+  float: right;
+}
+
+.text-output {
+  width: 100%;
+  height: 24ch;
+
+  overflow-y: scroll;
+  overflow-wrap: normal;
+}
+
+.console {
+  font-size: 10pt;
+
+  width: 80ch;
+
+  border-left: solid;
+  border-right: solid;
+  border-top: solid;
+  border-width: 1px;
+  border-radius: 2px;
+  border-color: var(--color-console-border);
+
+  margin-bottom: 1em;
+}
+
+.console .console-section {
+  border-bottom: 1px solid var(--color-console-border);
+
+  box-sizing: border-box;
+
+  min-width: 100%;
+
+  padding: 4px;
+}
+
+.console div.log {
+  font-family: 'Courier New', Courier, monospace;
+}
+
+.console input.command {
+  font-family: 'Courier New', Courier, monospace;
+  background: none;
+  color: inherit;
+  border: none;
+  border-bottom: 1px solid var(--color-console-border);
+}
+
+.debug {
+  display: none;
+}
+
+.text-output.debug-enable .debug {
+  display: block;
+}
+
+.small {
+  font-weight: lighter;
+}
+
+.bold {
+  font-weight: bolder;
+}
+
+.sublte {
+  color: #888;
+}
+
+.info {
+  color: var(--color-info);
+}
+
+.success {
+  color: var(--color-success);
+}
+
+.warning {
+  color: var(--color-warning);
+}
+
+.danger {
+  color: var(--color-danger);
+}
+
+button {
+  border: none;
+  border-radius: 1px;
+}
+
+button.info {
+  background-color: var(--color-info);
+  color: white;
+}
+
+button.success {
+  background-color: var(--color-success);
+  color: white;
+}
+
+button.warning {
+  background-color: var(--color-warning);
+  color: white;
+}
+
+button.danger {
+  background-color: var(--color-danger);
   color: white;
 }
