--- a/public/theme.css
+++ b/public/theme.css
@@ -8,4 +8,7 @@
   --color-success: #28a745;
   --color-warning: #ffc107;
   --color-danger: #ee3e4f;
+
+  --color-playername: #66aaff;
+  --color-playerself: #ffaa66;
 }
