add enetityname style

--- a/public/console.css
+++ b/public/console.css
@@ -64,6 +64,10 @@
   color: var(--color-npcname);
 }
 
+.console-entityname {
+  color: var(--color-entityname);
+}
+
 .small {
   font-weight: lighter;
 }
