Commiting UI changes removing javascript

--- a/public/client/main.css
+++ b/public/client/main.css
@@ -81,6 +81,10 @@ header {
     background-color: black;
 }
 
+.navT:hover .navT-items {
+    display: flex;
+}
+
 .navT-items a {
     font-size: 14px;
 }
