--- a/public/console.css
+++ b/public/console.css
@@ -4,6 +4,8 @@
 
   overflow-y: scroll;
   overflow-wrap: normal;
+
+  white-space: pre;
 }
 
 .console {
@@ -66,6 +68,10 @@
 
 .console-entityname {
   color: var(--color-entityname);
+}
+
+.console-propname {
+  color: var(--color-propname);
 }
 
 .small {
